Fix scrollbar bug

--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
   background-color: var(--alpha); 
 }
 
